--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -12,6 +12,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+
 # OS
 .DS_Store
 
@@ -27,6 +28,8 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+.prettierrc
+
 
 # IDE - VSCode
 .vscode/*
